cssdir = $(THEME_DIR)/ingi/css
css_DATA = \
Makefile.am \
blockrain.css \
bootstrap-theme.css \
bootstrap-theme.css.map \
bootstrap-theme.min.css \
bootstrap-theme.min.css.map \
bootstrap.css \
bootstrap.css.map \
bootstrap.min.css \
bootstrap.min.css.map \
ictv.css 


EXTRA_DIST = $(css_DATA)

DISTCLEANFILES = \
	Makefile.in
