fontsdir = $(THEME_DIR)/ingi/fonts
fonts_DATA = \
YanoneKaffeesatz-Bold.otf \
YanoneKaffeesatz-Light.otf \
YanoneKaffeesatz-Regular.otf \
YanoneKaffeesatz-Thin.otf \
glyphicons-halflings-regular.eot \
glyphicons-halflings-regular.svg \
glyphicons-halflings-regular.ttf \
glyphicons-halflings-regular.woff \
glyphicons-halflings-regular.woff2


EXTRA_DIST = $(fonts_DATA)

DISTCLEANFILES = \
	Makefile.in
